# event_management_system

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250810_01_add_cascade_to_registrations_fk.py  e192d1707a3a_add_models.py
app/: main.py
app/admin/: auth.py  setup.py  views.py
app/core/: config.py
app/database/: database.py
app/models/: __init__.py  event.py  registration.py  timestamp_mixin.py  user.py
app/routers/: auth.py  event.py  registration.py
app/schemas/: auth.py  event.py  registration.py  user.py
app/utils/: dependencies.py  jwt_token.py  redis.py  tasks.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  Protected.tsx  Spinner.tsx  ToastProvider.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DashboardPage.tsx  EventDetailPage.tsx  EventsPage.tsx  LoginPage.tsx  MyEventsPage.tsx  RegisterPage.tsx  VerifyEmailPage.tsx
